# goridge-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: CI.yml
src/: bit_operations.rs  errors.rs  lib.rs  relay.rs  unix.rs
src/frame/: frame_flags.rs  mod.rs
src/pipe/: commands.rs  mod.rs
tests/: composer.json  worker.php
