[package]
name = "goridge-rs"
version = "0.1.0"
authors = ["Valery Piashchynski <piashchynski.valery@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
crc32fast = "1"
tokio = { version = "1", features = ["default", "io-util", "process", "time", "test-util", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
